--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,7 +1,6 @@
 .form {
     &__group:not(:last-child) {
         margin-bottom: 2rem;
-
     }
 
     &__input {
@@ -10,28 +9,32 @@
         color: inherit;
         padding: 1.5rem 2rem;
         border-radius: 2px;
-        background-color: rgba($color-white,.5);
+        background-color: rbga($color-white, .5);
         border: none;
         border-bottom: 3px solid transparent;
         width: 90%;
         display: block;
         transition: all .3s;
 
+        @include respond(tab-port) {
+            width: 100%;
+        }
+
         &:focus {
             outline: none;
             box-shadow: 0 1rem 2rem rgba($color-black, .1);
-            border-bottom: 3px solid green;
-            
+            border-bottom: 3px solid $color-primary;
         }
 
         &:focus:invalid {
-            border-bottom: 3px solid red;
+            border-bottom: 3px solid $color-secondary-dark;
         }
 
         &::-webkit-input-placeholder {
             color: $color-grey-dark-2;
         }
     }
+
 
     &__label {
         font-size: 1.2rem;
@@ -42,22 +45,27 @@
         transition: all .3s;
     }
 
-    // + irmao, proximo elemento
     &__input:placeholder-shown + &__label {
         opacity: 0;
         visibility: hidden;
         transform: translateY(-4rem);
     }
 
+
     &__radio-group {
         width: 49%;
         display: inline-block;
+
+        @include respond(tab-port) {
+            width: 100%;
+            margin-bottom: 2rem;
+        }
     }
 
     &__radio-input {
         display: none;
     }
-
+    
     &__radio-label {
         font-size: $default-font-size;
         cursor: pointer;
@@ -80,7 +88,7 @@
             display: block;
             height: 1.3rem;
             width: 1.3rem;
-            border-radius: 50px;
+            border-radius: 50%;
             position: absolute;
             top: 50%;
             left: 50%;
@@ -93,6 +101,5 @@
 
     &__radio-input:checked ~ &__radio-label &__radio-button::after {
         opacity: 1;
-
     }
 }
