--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,102 +1,96 @@
-/*:link, quando for selecionado*/
-/*:visited - estado quando o usuario já clicou no botão*/
 .btn {
-
     &,
     &:link,
     &:visited {
         text-transform: uppercase;
         text-decoration: none;
-        padding: 15px 40px; /*top bottom right left*/
+        padding: 1.5rem 4rem;
         display: inline-block;
-        border-radius: 100px;
-        transition: all .2s; /*todas as propriedades estão habilitadas para receber animacao*/
+        border-radius: 10rem;
+        transition: all .2s;
         position: relative;
+        font-size: $default-font-size;
 
-        //change for the <button> element
+        //Change for the <button> element
         border: none;
         cursor: pointer;
     }
-
+    
     &:hover {
         transform: translateY(-3px);
-        box-shadow: 0 10px 20px rgba($color-black, .2);/*sombra para direção X, sombra para baixo,  tamanho fo borrado, cor*/
-    
+        box-shadow: 0 1rem 2rem rgba($color-black,.2);
+
         &::after {
             transform: scaleX(1.4) scaleY(1.6);
-	        opacity: 0;
+            opacity: 0;
         }
     }
-
-    /*botão clicando*/
+    
     &:active,
     &:focus {
         outline: none;
-        box-shadow: 0 5px 10px rgba($color-black, .2);
         transform: translateY(-1px);
+        box-shadow: 0 .5rem 1rem rgba($color-black,.2);
     }
-
+    
     &--white {
         background-color: $color-white;
         color: $color-grey-dark;
-        
+
         &::after {
             background-color: $color-white;
-    
         }
     }
 
-    &--pink {
+    &--green {
         background-color: $color-primary;
         color: $color-white;
-        
+
         &::after {
             background-color: $color-primary;
-    
         }
     }
-
+    
     &::after {
         content: "";
         display: inline-block;
         height: 100%;
         width: 100%;
-        border-radius: 100px;
+        border-radius: 10rem;
         position: absolute;
         top: 0;
         left: 0;
-        z-index: -1; /*Define a posição dos elementos*/
+        z-index: -1;
         transition: all .4s;
     }
-
+    
     &--animated {
         animation: moveInBottom .5s ease-out .75s;
         animation-fill-mode: backwards;
     }
-
 }
 
 .btn-text {
     &:link,
     &:visited {
         font-size: $default-font-size;
-        color: $color-secundary-light;
+        color: $color-primary;
         display: inline-block;
         text-decoration: none;
-        border-bottom: 1px solid $color-secundary-light;
+        border-bottom: 1px solid $color-primary;
         padding: 3px;
         transition: all .2s;
     }
 
     &:hover {
-        background-color: $color-secundary-light;
+        background-color: $color-primary;
         color: $color-white;
         box-shadow: 0 1rem 2rem rgba($color-black, .15);
-        transform: translateX(-2px);
+        transform: translateY(-2px);
     }
 
-    &::active {
+    &:active {
         box-shadow: 0 .5rem 1rem rgba($color-black, .15);
-        transform: translateX(0);
+        transform: translateY(0);
     }
 }
